--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,6 +28,8 @@ jobs:
         working-directory: oso/languages/python/oso
       - run: pip install -r requirements.txt
         working-directory: oso-flask-tutorial
+      - run: sqlite3 expenses.db ".read expenses.sql"
+        working-directory: oso-flask-tutorial
       - run: pytest
         working-directory: oso-flask-tutorial
 #       - uses: rtCamp/action-slack-notify@master
